  * Improved skipping of command line args when bad parameters are given. (Eg, now nget -p bad -r foo -p good -r bar will still execute the -p good -r bar part, rather than exiting on the first error.)
  * Added GROUP error exit status (code 16) for when all servers fail to update a group's headers. (Previously gave an OTHER error.)

2002-05-17 v0.18.2:
  * Work around exception handling segfaults with older versions of gcc by not using multiple inheritance in exception classes. (reported by Waldemar la Tendresse)
  * Fix redefinition of SIZEOF_INT_FAST64_T compile warnings on systems without int_fast64_t.
  * Fix "Numerical result out of range" connection error that occured on some addresses due to using too small a buffer.
  * Make install create directories if needed. (reported by Godmar Back)
  * Fix printf compile warnings on some arches (eg macosx) and include CPPFLAGS in make dep line. (Thomas Kotzian)
  * Add nntp auth support to ngetlite too.

2002-05-02 v0.18.1:
  * Fix compile on 64bit arches (based on patch from Chris Lawrence.)
  * Fix bug introduced in 0.18 where -g would fail on a new group with fullxover=0. (reported by "lunz")

2002-04-02 v0.18:
  * Remove fixed length buffers. (Fix errors with extremely long subjects, etc.)
  * If a group has articles from multiple servers show the shortname of the server each part is being retrieved from.
  * Don't force the connection to close on unequal line count.
  * Further additions to test suite.
  * Documented make test in README.
  * Make -h work for -r/-R too. (Only download articles from the given host.  If that host doesn't have the article, skip and flag it as an error)
  * Added a connection pool to avoid continuously reconnecting when articles are spread across different servers a lot. (suggested by Thore Harald Hoye)  (Adds new .ngetrc global opts idletimeout/maxconnections, and per-server idletimeout)